# ESP-RC-Car

./: .gitignore  .gitmodules  4BHELS_Projektarbeit-Antrag.docx  Bestellliste.txt  Chassi V15 LochTest.3mf  ESP-RC-Car.code-workspace  Fehler PCB.txt  RC-Car + 3D Print Settings.3mf  README.md  pins für crv8323.txt
.claude/: settings.local.json
App/: README.md  pubspec.yaml
Code/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.cdc.defaults  sdkconfig.defaults  sdkconfig.espidf  sdkconfig.espidf_factory  sdkconfig.espidf_ota  sdkconfig.espidf_step_test  simplefoc_test.cpp
Code/components/rc_comms/: CMakeLists.txt  rc_comms.c
Code/components/rc_comms/include/: rc_comms.h
Esp-RC-Car/: 00 Overview.md  Architektur.canvas
PCB/: .gitignore  ESP-RC-Car.BomDoc  ESP-RC-Car.PcbDoc  ESP-RC-Car.PrjPcb  ESP-RC-Car.PrjPcbStructure  ESP-RC-Car.SchDoc  Sheet1.SchDoc  ~ESP-RC-Car.PcbDoc.lck
STL/: 1.5mm Rod Ball Cup 4 - Arduino RC Drift Car.stl  Ball Joint Drive Shaft 3 (Connects to Cups) - Arduino RC Drift Car.stl  Battery Holder Tab - Arduino RC Drift Car.stl  Bumper Holder - Arduino RC Drift Car.stl  Bumper Plate - Arduino RC Drift Car.stl  Chassi V1.3mf  Chassi V10.mtl  Chassi V11.blend  Chassi V11.mtl  Chassi V12.stl  Chassi V13.blend  Chassi V13.blend1  Chassi V13.stl  Chassi V14.blend  Chassi V14.stl  Chassi V15 Schnitt V2.stl  Chassi V15 Schnitt V3.stl  Chassi V15 schnitt.stl  Chassi V15.blend  Chassi V15.stl  Chassi V16.blend  Chassi V16.blend1  Chassi V16.stl  Chassi V17.blend  Chassi V17.stl  Chassi V18.blend  Chassi V18.stl  Chassi V3.mtl  (+51 more)
(+152 files in other folders)
